--- a/src/index.html
+++ b/src/index.html
@@ -15,29 +15,27 @@
   <!-- imports -->
   <script src="https://kit.fontawesome.com/242d91a26c.js" crossorigin="anonymous"></script>
 </head>
-<body class ="h-screen w-screen">
-  <div class=" bg-no-repeat bg-cover  bg-fixed h-full w-full lg:bg-left-bottom transition-all" style ="background-image: url('https://images.unsplash.com/photo-1560840067-ddcaeb7831d2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OXx8c2t5c2NyYXBlcnxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=800&q=60');">
-    <div class="backdrop-blur-sm flex flex-col lg:flex backdrop-brightness-75 h-full w-full">
-      <nav class="flex w-full h-9 justify-around text-2xl text-white pt-7">
+<body class ="h-screen w-screen ">
+  <div class=" h-full w-full lg:bg-left-bottom transition-all  bg-gradient-to-r from-purple-600 to-blue-500 backdrop-blur-md" >
+    <div class="flex flex-col lg:flex  h-full w-full duration-300">
+      <nav class="flex w-full h-fit justify-around text-2xl text-white py-5 ">
         <i class="fa-solid fa-city hover:text-yellow-300"></i>
         <h1 class ="font-pacifico text-3xl text-yellow-300">Stack</h1>
         <i class="fa-solid fa-cubes-stacked hover:text-yellow-300"></i>
       </nav>
-      <div class = "flex flex-col grow justify-around ">
-        <h1 class = "font-pacifico text-white text-center text-5xl ">Ready to leave your <span class="text-yellow-300">worries</span> to us.</h1>
-        <div>
-          <h1 class = "font-pacifico text-white text-center text-3xl lg:text-4xl "> We let you manage your  </h1>
-          <div class="font-pacifico text-yellow-300  w-full items-center text-3xl text-center flex">
-            <i class="fa-brands fa-free-code-camp text-center w-full lg:text-4xl pt-10 h-9 pl-5"> <span class=" lg:text-4xl toType font-pacifico"></span></i>
-          </div>
-        </div>
-        <div class = "flex w-full justify-evenly">
-          <button class="rounded-full border-2 w-fit px-10 self-center text-white text-3xl font-pacifico border-white duration-300 hover:text-yellow-300 hover:scale-110">Admin</button>
-          <button class="rounded-full border-2 w-fit px-10 self-center text-white text-3xl font-pacifico border-white duration-300 hover:text-yellow-300 hover:scale-110">User</button>
-        </div>
+      <div class = "h-screen ">
+        <form action="#" method="post" class = "flex flex-col justify-around h-full w-full items-center">
+            <div class ='flex flex-col items-center space-y-7'>
+              <input type="text" name="username" id="username " placeholder="Admin/User Id" class ="bg-transparent  border-2 border-white rounded-full p-5 px-14 text-white ">
+              <input type="password" name="password" id="password" placeholder="password" class ="bg-transparent border-2 border-white rounded-full p-5 px-14 text-white">
+            </div>
+            <div>
+            <button type="submit" class ="bg-transparent border-2 border-white rounded-full py-2 font-roboto font-extrabold hover:scale-110 duration-300 hover:text-yellow-300 hover:border-4 hover:border-yellow-300   text-white px-10">Log In</button>
+            </div>
+        </form>
+      </div>
       </div>
     </div>
   </div>
-<script src="../out/output.js"></script>
 </body>
 </html>
